<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to Are We There Yet!</string>
    <string name="app_name">Are We There Yet?</string>

    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>

    <string name="menu_set">Set Alarm</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_ringtone">Select ringtone</string>
    <string name="menu_pinned">Recent alarms</string>
    <string name="menu_myloc">My Location</string>

    <string name="alarm_text">You have arrived!</string>
    <string name="button_mute">Mute Alarm</string>

    <string name="drawer_setringtone">Set ringtone</string>
    <string name="drawer_pinnedalarms">Pinned alarms</string>
    <string name="drawer_recentalarms">Recent alarms</string>
    <string name="drawer_donate">Donate $1</string>
    
    <string name="ticker_text">Alarm set</string>
	<string name="notification_title">Geo-alarm set</string>
	<string name="notification_message">Touch to reset alarm</string>
	
	<!-- String displayed as the alert summary while loading the alert name from
         the media player. [CHAR LIMIT=NONE] -->
    <string name="loading_ringtone">Loading ringtone\u2026</string>
	<!-- Summary for the alarm preference when silent is chosen. -->
    <string name="silent_alarm_summary">Silent</string>

    <!-- Accessibility Strings -->
    <string name="accessibility_alarmanimation">Alarm clock animation</string>
    <string name="accessibility_mylocation">My Location</string>


</resources>
