<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dip"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="13dp"
        android:text="@string/alarm_text"
        android:textSize="21sp"
        android:textStyle="bold"
        android:gravity="center_horizontal">
</TextView>
	<LinearLayout android:layout_height="wrap_content" android:id="@+id/descriptions" android:layout_width="fill_parent" android:orientation="vertical">
		<ImageView
				android:id="@+id/spinner"
				android:layout_width="200dp"
				android:layout_height="200dp"
				android:layout_gravity="center_horizontal"
				android:layout_margin="20dp"
				android:src="@anim/alarm_ring"
                android:contentDescription="@string/accessibility_alarmanimation"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/buttons" android:layout_width="fill_parent" android:layout_marginTop="2dp">
	    <Button android:background="@drawable/button_green"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:shadowColor="#77000000"
                android:shadowDy="-1.05"
                android:shadowRadius="1.05"
                android:drawableRight="@drawable/ic_check_white"
                android:id="@+id/ok"
                android:text="@string/button_mute"/>
	</LinearLayout>
</LinearLayout>